# coding-assignment-dlo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
minddistrict/: cli.py  token.py  url.py
tests/: test_token_generator.py  test_url_generator.py
